[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1"
serde_with = "3"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tower-cookies = "0.10"
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = { version = "*", features = ["serde", "v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
